# ChangeLog for www-client/mozilla-firefox
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.3 2005/03/23 15:43:56 agriffis Exp $

*mozilla-firefox-1.0.1-r1 (23 Mar 2005)

  23 Mar 2005; Aron Griffis <agriffis@gentoo.org>
  +mozilla-firefox-1.0.1-r1.ebuild:
  Use a stub script instead of symlink to mozilla-launcher. This in
  combination with mozilla-launcher-1.28 should fix #78890

  18 Mar 2005; Seemant Kulleen <seemant@gentoo.org>
  +files/svg-cairo-0.3.0-fix.patch, +files/firefox-0.8-gcc-3.4.patch,
  +files/firefox-0.9-init.tar.bz2,
  +files/firefox-0.9-nsFormHistory-crash-fix.patch, +files/10MozillaFirefox,
  +files/mozilla-firefox-1.0-kp_separator.patch,
  +files/mozilla-1.3-alpha-stubs.patch, +files/firefox,
  +files/icon/firefox-icon.png, +files/icon/mozillafirefox.desktop,
  +files/mozilla-firebird-amd64.patch,
  +files/mozilla-firefox-1.0-4ft2.patch,
  +files/mozilla-firefox-mousebuttons.patch, +files/mozilla-hppa.patch,
  +metadata.xml, +mozilla-firefox-0.9.3.ebuild,
  +mozilla-firefox-1.0_pre-r2.ebuild, +mozilla-firefox-1.0_rc1.ebuild,
  +mozilla-firefox-1.0.ebuild, +mozilla-firefox-1.0-r2.ebuild,
  +mozilla-firefox-1.0_rc2.ebuild, +mozilla-firefox-1.0-r3.ebuild,
  +mozilla-firefox-1.0.1.ebuild:
  Moved from net-www/mozilla-firefox to www-client/mozilla-firefox.

  16 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  mozilla-firefox-1.0.1.ebuild:
  Use proper toolchain commands.

  02 Mar 2005; Guy Martin <gmsoft@gentoo.org> mozilla-firefox-1.0.1.ebuild:
  Stable on hppa.

  28 Feb 2005; Michael Hanselmann <hansmi@gentoo.org>
  mozilla-firefox-1.0.1.ebuild:
  Stable on ppc.

  28 Feb 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  mozilla-firefox-1.0.1.ebuild:
  Stable on sparc wrt #83267

  27 Feb 2005; Simon Stelling <blubb@gentoo.org>
  mozilla-firefox-1.0.1.ebuild:
  stable on amd64 wrt bug #83267
