@@ -1,0 +1,1 @@
+MD5 fd1a0dec3e763e93eb45c0c34b399712 firefox-1.0.2-source.tar.bz2 32760074
