@@ -1,6 +1,11 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.3 2005/03/23 15:43:56 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.4 2005/03/23 19:55:58 brad Exp $
+
+*mozilla-firefox-1.0.2 (23 Mar 2005)
+
+  23 Mar 2005; Brad Laue <brad@gentoo.org> +mozilla-firefox-1.0.2.ebuild:
+  Version bump. Moving to stable x86 immediately for security updates.
 
 *mozilla-firefox-1.0.1-r1 (23 Mar 2005)
 
